remove: delete outdated and redundant integration tests
- Remove `AbstractIntegrationTest` and associated repository test (`TransactionRepositoryTest`) due to their redundancy with updated service and unit testing approaches.
- Refactor `WithCustomMockUser` annotation to introduce a factory class with enhanced test user initialization, aligning with updated user model fields.
- Add and optimize service/controller test coverage for core features, including snapshot calculations, authentication, and dashboard data retrieval.
- Enhance `TransactionService` with access validation and ensure tests handle ownership constraints.